--- a/css/balearic-mediaqueries.less
+++ b/css/balearic-mediaqueries.less
@@ -2,69 +2,59 @@
 /* --------------------------------------------------------------
 MEDIAQUERIES LG/MD - LAYOUTS BIGGER THAN 992px
 -------------------------------------------------------------- */
-@media (max-width: 1920px) {
+@media (max-width: 1920px) {}
 
-}
-@media (max-width: 1680px) {
+@media (max-width: 1680px) {}
 
-}
-@media (max-width: 1600px) {
+@media (max-width: 1600px) {}
 
-}
-@media (max-width: 1440px) {
+@media (max-width: 1440px) {}
 
-}
-@media (max-width: 1366px) {
+@media (max-width: 1366px) {}
 
-}
-@media (max-width: 1280px) {
+@media (max-width: 1280px) {}
 
-}
-@media (max-width: 1170px) {
+@media (max-width: 1170px) {}
 
-}
-@media (max-width: 1024px) {
+@media (max-width: 1024px) {}
 
-}
-@media (max-width: 992px) {
+@media (max-width: 992px) {}
 
-}
 /* --------------------------------------------------------------
 MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
 -------------------------------------------------------------- */
-@media (max-width: 991px) {
+@media (max-width: 991px) {}
 
-}
-@media (max-width: 800px) {
+@media (max-width: 800px) {}
 
-}
-@media (max-width: 768px) {
+@media (max-width: 768px) {}
 
-}
 /* --------------------------------------------------------------
 MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
 -------------------------------------------------------------- */
-@media (max-width: 600px) {
-
+@media (max-width: 767px) {
+    .the-logo .logo-container {
+        text-align: left;
+        padding-bottom: 0.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
 }
-@media (max-width: 533px) {
 
-}
-@media (max-width: 424px) {
+@media (max-width: 600px) {}
 
-}
-@media (max-width: 414px) {
+@media (max-width: 533px) {}
 
-}
-@media (max-width: 375px) {
+@media (max-width: 424px) {}
 
-}
-@media (max-width: 360px) {
+@media (max-width: 414px) {}
 
-}
-@media (max-width: 320px) {
+@media (max-width: 375px) {}
 
-}
-@media (max-width: 240px) {
+@media (max-width: 360px) {}
 
-}
+@media (max-width: 320px) {}
+
+@media (max-width: 240px) {}
