Footer: Maquetado + Responsive

--- a/css/balearic-mediaqueries.css
+++ b/css/balearic-mediaqueries.css
@@ -4,6 +4,16 @@ MEDIAQUERIES LG/MD - LAYOUTS BIGGER THAN 992px
 /* --------------------------------------------------------------
 MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
 -------------------------------------------------------------- */
+@media (max-width: 991px) {
+  .the-footer .footer-item {
+    font-size: 0.8rem;
+    line-height: 1rem;
+    margin-bottom: 1rem;
+  }
+  .the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link {
+    font-size: 0.8rem;
+  }
+}
 /* --------------------------------------------------------------
 MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
 -------------------------------------------------------------- */
@@ -15,5 +25,13 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+  }
+  .the-footer .footer-item {
+    font-size: 0.9rem;
+    line-height: 1rem;
+    margin-bottom: 2rem;
+  }
+  .the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link {
+    font-size: 0.9rem;
   }
 }
