--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -103,7 +103,7 @@ a {
     }
 
     &:focus {
-       outline: none; 
+        outline: none;
     }
 }
 
@@ -111,10 +111,10 @@ a {
     padding: 1rem 0;
 
     & a {
-        color: rgba(0,0,0,.5);
+        color: rgba(0, 0, 0, .5);
 
         &:hover {
-            color: rgba(0,0,0,.7);
+            color: rgba(0, 0, 0, .7);
         }
     }
 
@@ -148,6 +148,53 @@ a {
 /* --------------------------------------------------------------
 2.- FOOTER
 -------------------------------------------------------------- */
+.the-footer {
+    background: @softblue;
+    color: @white;
+    padding: 4rem 1rem;
+    padding-bottom: 6rem;
+
+    & ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    & .footer-item {
+        font-size: 0.75rem;
+        line-height: 0.75rem;
+
+        & img {
+            max-width: 200px !important;
+            margin-bottom: 1.3rem;
+        }
+
+
+        & .widgettitle {
+            font-size: 1rem;
+            font-weight: 600;
+            margin-bottom: 1.2rem;
+        }
+
+        & a {
+           color: @white; 
+        }
+
+        & .widget_nav_menu {
+            & .menu {
+                list-style: none;
+
+                & .nav-item {
+                   & .nav-link {
+                       color: @white;
+                       font-size: .8rem;
+                       padding-left: 0;
+                   } 
+                }
+            }
+        }
+    }
+}
 
 /* --------------------------------------------------------------
 3.- HOME
