--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -169,6 +169,10 @@ a {
             margin-bottom: 1.3rem;
         }
 
+        & .widget_custom_social_widget a {
+            font-size: 1.2rem;
+            margin-right: 1rem;
+        }
 
         & .widgettitle {
             font-size: 1rem;
