--- a/css/balearic-mediaqueries.css
+++ b/css/balearic-mediaqueries.css
@@ -1,6 +1,44 @@
 /* --------------------------------------------------------------
 MEDIAQUERIES LG/MD - LAYOUTS BIGGER THAN 992px
 -------------------------------------------------------------- */
+@media (max-width: 1680px) {
+  .home-main-content {
+    padding-left: 14vw !important;
+  }
+}
+@media (max-width: 1600px) {
+  .home-main-content {
+    padding-left: 11vw !important;
+  }
+}
+@media (max-width: 1440px) {
+  .home-main-content {
+    padding-left: 6vw !important;
+    padding-right: 5vw !important;
+  }
+}
+@media (max-width: 1366px) {
+  .home-main-content {
+    padding-left: 4vw !important;
+    padding-right: 4vw !important;
+  }
+}
+@media (max-width: 1280px) {
+  .home-main-content {
+    padding-left: 3vw !important;
+    padding-right: 3vw !important;
+    font-size: 1rem;
+    line-height: 1.8rem;
+  }
+}
+@media (max-width: 1170px) {
+  .home-main-content {
+    padding-left: 1.5vw !important;
+    padding-right: 1.5vw !important;
+    font-size: 0.9rem;
+    line-height: 1.6rem;
+  }
+}
 /* --------------------------------------------------------------
 MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
 -------------------------------------------------------------- */
@@ -12,6 +50,19 @@ MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
   }
   .the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link {
     font-size: 0.8rem;
+  }
+  .home-main-picture img {
+    max-width: 70%;
+    margin: 2rem auto;
+    display: block;
+  }
+  .home-main-content {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    font-size: 1rem;
+    line-height: 1.9rem;
+    max-width: 70%;
+    margin: 0 auto;
   }
 }
 /* --------------------------------------------------------------
@@ -33,5 +84,16 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
   }
   .the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link {
     font-size: 0.9rem;
+  }
+  .home-main-picture img {
+    max-width: 90%;
+    margin: 2rem auto;
+    display: block;
+  }
+  .home-main-content {
+    font-size: 1rem;
+    line-height: 1.9rem;
+    max-width: 90%;
+    margin: 0 auto;
   }
 }
