--- a/css/balearic-mediaqueries.less
+++ b/css/balearic-mediaqueries.less
@@ -4,17 +4,49 @@ MEDIAQUERIES LG/MD - LAYOUTS BIGGER THAN 992px
 -------------------------------------------------------------- */
 @media (max-width: 1920px) {}
 
-@media (max-width: 1680px) {}
+@media (max-width: 1680px) {
+    .home-main-content {
+        padding-left: 14vw !important;
+    }
+}
 
-@media (max-width: 1600px) {}
+@media (max-width: 1600px) {
+    .home-main-content {
+        padding-left: 11vw !important;
+    }
+}
 
-@media (max-width: 1440px) {}
+@media (max-width: 1440px) {
+    .home-main-content {
+        padding-left: 6vw !important;
+        padding-right: 5vw !important;
+    }
+}
 
-@media (max-width: 1366px) {}
+@media (max-width: 1366px) {
+    .home-main-content {
+        padding-left: 4vw !important;
+        padding-right: 4vw !important;
+    }
+}
 
-@media (max-width: 1280px) {}
+@media (max-width: 1280px) {
+    .home-main-content {
+        padding-left: 3vw !important;
+        padding-right: 3vw !important;
+        font-size: 1rem;
+        line-height: 1.8rem;
+    }
+}
 
-@media (max-width: 1170px) {}
+@media (max-width: 1170px) {
+    .home-main-content {
+        padding-left: 1.5vw !important;
+        padding-right: 1.5vw !important;
+        font-size: .9rem;
+        line-height: 1.6rem;
+    }
+}
 
 @media (max-width: 1024px) {}
 
@@ -32,6 +64,21 @@ MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
 
     .the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link {
         font-size: 0.8rem;
+    }
+
+    .home-main-picture img {
+        max-width: 70%;
+        margin: 2rem auto;
+        display: block;
+    }
+
+    .home-main-content {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+        font-size: 1rem;
+        line-height: 1.9rem;
+        max-width: 70%;
+        margin: 0 auto;
     }
 }
 
@@ -60,6 +107,19 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
 
     .the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link {
         font-size: 0.9rem;
+    }
+
+    .home-main-picture img {
+        max-width: 90%;
+        margin: 2rem auto;
+        display: block;
+    }
+
+    .home-main-content {
+        font-size: 1rem;
+        line-height: 1.9rem;
+        max-width: 90%;
+        margin: 0 auto;
     }
 }
 
