--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -181,7 +181,7 @@ a {
         }
 
         & a {
-           color: @white; 
+            color: @white;
         }
 
         & .widget_nav_menu {
@@ -189,11 +189,11 @@ a {
                 list-style: none;
 
                 & .nav-item {
-                   & .nav-link {
-                       color: @white;
-                       font-size: .8rem;
-                       padding-left: 0;
-                   } 
+                    & .nav-link {
+                        color: @white;
+                        font-size: .8rem;
+                        padding-left: 0;
+                    }
                 }
             }
         }
@@ -203,3 +203,26 @@ a {
 /* --------------------------------------------------------------
 3.- HOME
 -------------------------------------------------------------- */
+
+.home-main-content {
+    padding-left: 18vw !important;
+    padding-right: 5vw !important;
+    font-size: 1rem;
+    line-height: 2rem;
+    font-weight: 400;
+
+    & strong {
+        font-weight: 700;
+    }
+
+    & img {
+        margin-bottom: 2rem;
+    }
+
+    & h2 {
+        color: @softblue;
+        font-size: 1.5rem;
+        font-weight: 700;
+        margin-bottom: 1.5rem;
+    }
+}
