Home - Localizaciones: Maquetado + Responsive

--- a/css/balearic-mediaqueries.less
+++ b/css/balearic-mediaqueries.less
@@ -80,6 +80,25 @@ MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
         max-width: 70%;
         margin: 0 auto;
     }
+
+    .home-main-content h2 {
+        font-size: 1.3rem;
+    }
+
+    .home-location-tax .home-location-tax-wrap h2 {
+        padding: 0 18%;
+        font-size: 1rem;
+    }
+
+    .title-container {
+        padding: 3rem 4vw;
+        padding-top: 1rem;
+    }
+
+    .title-container h2 {
+        font-size: 1.3rem;
+        letter-spacing: 0.5px;
+    }
 }
 
 @media (max-width: 800px) {}
@@ -121,13 +140,47 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
         max-width: 90%;
         margin: 0 auto;
     }
+
+    .home-location-tax .wrapper img {
+        width: 100%;
+    }
+
+    .home-location-tax {
+        margin-bottom: 2rem;
+        max-width: 75%;
+        margin: 2rem auto;
+        margin-top: 0;
+        display: block;
+    }
+
+    .home-location-tax .home-location-tax-wrap h2 {
+        padding: 0 24%;
+        font-size: 1.5rem;
+    }
 }
 
 @media (max-width: 600px) {}
 
 @media (max-width: 533px) {}
 
-@media (max-width: 424px) {}
+@media (max-width: 424px) {
+    .home-location-tax {
+        max-width: 85%;
+    }
+
+    .title-container h2 {
+        font-size: 1.1rem;
+        line-height: 1.7rem;
+    }
+
+    .home-main-content h2 {
+        font-size: 1.1rem;
+    }
+
+    .home-location-tax .home-location-tax-wrap h2 {
+        font-size: 1.2rem;
+    }
+}
 
 @media (max-width: 414px) {}
 
