--- a/css/balearic-mediaqueries.css
+++ b/css/balearic-mediaqueries.css
@@ -64,6 +64,21 @@ MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
     max-width: 70%;
     margin: 0 auto;
   }
+  .home-main-content h2 {
+    font-size: 1.3rem;
+  }
+  .home-location-tax .home-location-tax-wrap h2 {
+    padding: 0 18%;
+    font-size: 1rem;
+  }
+  .title-container {
+    padding: 3rem 4vw;
+    padding-top: 1rem;
+  }
+  .title-container h2 {
+    font-size: 1.3rem;
+    letter-spacing: 0.5px;
+  }
 }
 /* --------------------------------------------------------------
 MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
@@ -95,5 +110,34 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
     line-height: 1.9rem;
     max-width: 90%;
     margin: 0 auto;
+  }
+  .home-location-tax .wrapper img {
+    width: 100%;
+  }
+  .home-location-tax {
+    margin-bottom: 2rem;
+    max-width: 75%;
+    margin: 2rem auto;
+    margin-top: 0;
+    display: block;
+  }
+  .home-location-tax .home-location-tax-wrap h2 {
+    padding: 0 24%;
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 424px) {
+  .home-location-tax {
+    max-width: 85%;
+  }
+  .title-container h2 {
+    font-size: 1.1rem;
+    line-height: 1.7rem;
+  }
+  .home-main-content h2 {
+    font-size: 1.1rem;
+  }
+  .home-location-tax .home-location-tax-wrap h2 {
+    font-size: 1.2rem;
   }
 }
