--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -226,3 +226,61 @@ a {
         margin-bottom: 1.5rem;
     }
 }
+
+.home-locations-section {
+    padding: 4rem 1rem;
+    padding-top: 2rem;
+}
+
+.title-container {
+    text-align: center;
+    padding: 4rem 11vw;
+    padding-top: 2rem;
+    text-transform: uppercase;
+
+    & h2 {
+        color: @softblue;
+        font-size: 1.5rem;
+        font-weight: 700;
+        letter-spacing: 0.5px;
+    }
+}
+
+.home-location-tax {
+    margin-bottom: 2rem;
+    & .wrapper {
+        position: relative;
+
+        & img {
+            border-radius: 55px;
+        }
+    }
+
+    & .home-location-tax-wrap {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .5);
+        .display(flex);
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        border-radius: 55px;
+        .transition(all .3s ease-in-out);
+
+        & h2 {
+            color: @white;
+            text-align: center;
+            text-transform: uppercase;
+            padding: 2rem 22%;
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+
+        &:hover {
+            background: rgba(0, 0, 0, .3);
+        }
+    }
+}
