--- a/css/balearic-mediaqueries.less
+++ b/css/balearic-mediaqueries.less
@@ -46,6 +46,12 @@ MEDIAQUERIES LG/MD - LAYOUTS BIGGER THAN 992px
         font-size: .9rem;
         line-height: 1.6rem;
     }
+
+    .home-services-section .home-service-item h3 {
+        font-size: 1rem;
+        line-height: 1.5rem;
+        margin-top: 1.2rem;
+    }
 }
 
 @media (max-width: 1024px) {}
