--- a/css/balearic-style.css
+++ b/css/balearic-style.css
@@ -229,3 +229,19 @@ a:hover {
 .home-location-tax .home-location-tax-wrap:hover {
   background: rgba(0, 0, 0, 0.3);
 }
+.home-services-section {
+  background: #F6F6F6;
+  padding: 4rem 1rem;
+  padding-top: 2rem;
+}
+.home-services-section .home-service-item {
+  text-align: center;
+  padding: 0 1rem;
+}
+.home-services-section .home-service-item h3 {
+  color: #66C5E0;
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.7rem;
+  margin-top: 1.2rem;
+}
