--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -13,6 +13,7 @@ VARIABLES
 @white: #ffffff;
 @softblue: #66C5E0;
 @softbluehover: #2A9CBD;
+@gray: #F6F6F6;
 
 /* --------------------------------------------------------------
 BODY DEFAULTS
@@ -248,6 +249,7 @@ a {
 
 .home-location-tax {
     margin-bottom: 2rem;
+
     & .wrapper {
         position: relative;
 
@@ -283,4 +285,24 @@ a {
             background: rgba(0, 0, 0, .3);
         }
     }
+}
+
+.home-services-section {
+    background: @gray;
+    padding: 4rem 1rem;
+    padding-top: 2rem;
+
+    & .home-service-item {
+        text-align: center;
+        padding: 0 1rem;
+
+        & h3 {
+            color: @softblue;
+            font-size: 1.2rem;
+            font-weight: 600;
+            line-height: 1.7rem;
+            margin-top: 1.2rem;
+        }
+    }
+
 }
