--- a/css/balearic-mediaqueries.less
+++ b/css/balearic-mediaqueries.less
@@ -175,6 +175,10 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
         font-size: 0.9rem;
         line-height: 1.6rem;
     }
+
+    .home-main-section {
+        padding-top: 1rem;
+    }
 }
 
 @media (max-width: 600px) {}
