--- a/css/balearic-mediaqueries.css
+++ b/css/balearic-mediaqueries.css
@@ -140,6 +140,9 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
     font-size: 0.9rem;
     line-height: 1.6rem;
   }
+  .home-main-section {
+    padding-top: 1rem;
+  }
 }
 @media (max-width: 424px) {
   .home-location-tax {
