--- a/css/balearic-mediaqueries.less
+++ b/css/balearic-mediaqueries.less
@@ -132,6 +132,16 @@ MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
     .main-contact-section .main-contact-logo {
         padding-bottom: 3rem;
     }
+
+    .main-services-container .main-services-item-wrapper {
+        font-size: 0.9rem;
+        line-height: 1.5rem;
+        margin-bottom: 0;
+    }
+
+    .main-services-container .main-services-item-picture h3 {
+        font-size: 1rem;
+    }
 }
 
 @media (max-width: 800px) {}
@@ -209,12 +219,19 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
         width: auto;
         height: 190px;
         max-width: unset;
-        margin-left: -55%;
+        margin-left: -50%;
     }
 
     .main-contact-form-content {
         padding-bottom: 2rem;
         padding-left: 0;
+    }
+
+    .main-services-container .main-services-item-picture h3 {
+        font-size: 1.5rem;
+        line-height: 1.6rem;
+        max-width: 60%;
+        margin: 2rem auto;
     }
 }
 
@@ -223,7 +240,7 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
         width: auto;
         height: 190px;
         max-width: unset;
-        margin-left: -85%;
+        margin-left: -50%;
     }
 }
 
@@ -253,9 +270,17 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
         max-width: unset;
         margin-left: -105%;
     }
+
+    .main-services-container .main-services-item-picture h3 {
+        max-width: 80%;
+    }
 }
 
-@media (max-width: 414px) {}
+@media (max-width: 414px) {
+    .main-services-container .main-services-item-picture h3 {
+        max-width: 100%;
+    }
+}
 
 @media (max-width: 375px) {}
 
