--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -533,3 +533,52 @@ a {
         font-size: 1.2rem;
     }
 }
+
+/* --------------------------------------------------------------
+6.- CONTACTO
+-------------------------------------------------------------- */
+.main-services-container {
+    padding: 3rem 1rem;
+    padding-bottom: 2rem;
+
+    & .main-services-item-picture {
+        text-align: center;
+
+        & h3 {
+            color: @softblue;
+            font-size: 1.2rem;
+            font-weight: 600;
+            line-height: 1.6rem;
+            margin-top: 1rem;
+        }
+    }
+
+    & .main-services-item-wrapper {
+        font-size: 1.1rem;
+        line-height: 1.9rem;
+        margin-bottom: 1rem;
+
+        & ul li {
+            margin-bottom: 0.5rem;
+        }
+
+        & .btn-services {
+            background: @softblue;
+            color: @white;
+            font-weight: 600;
+            padding: 0.5rem 5rem;
+            margin: 2rem auto;
+            display: block;
+            max-width: 280px;
+            border-radius: 25px;
+
+            &:hover {
+                background: @softbluehover;
+            }
+        }
+    }
+}
+
+.even {
+    background: @gray;
+}
