Ajustes + Vista de Localizaciones

--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -71,6 +71,24 @@ a {
     }
 }
 
+@keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
+
 .main-banner-title {
     margin-top: 1.5rem;
     position: relative;
@@ -364,12 +382,25 @@ a {
         text-align: center;
         padding: 0 1rem;
 
+
         & h3 {
             color: @softblue;
             font-size: 1.2rem;
             font-weight: 600;
             line-height: 1.7rem;
             margin-top: 1.2rem;
+        }
+
+        &:hover {
+
+            & img {
+                animation: shake 0.82s ease-in-out both;
+                transform: translate3d(0, 0, 0);
+                backface-visibility: hidden;
+                perspective: 1000px;
+            }
+
+
         }
     }
 }
@@ -671,4 +702,8 @@ a {
 .servicios-location-tax {
     padding: 0rem 1rem;
     padding-top: 3rem;
+}
+
+.social-widget-container {
+    font-size: 1.5rem;
 }
