--- a/css/balearic-mediaqueries.less
+++ b/css/balearic-mediaqueries.less
@@ -122,6 +122,7 @@ MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
         height: 250px;
         max-width: unset;
         margin-left: -50%;
+        opacity: 0;
     }
 
     .main-contact-section .main-contact-preview {
@@ -141,6 +142,15 @@ MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
 
     .main-services-container .main-services-item-picture h3 {
         font-size: 1rem;
+    }
+
+    .single {
+        & .main-banner-title img {
+            width: 100%;
+            height: auto;
+            max-width: unset;
+            margin-left: 0;
+        }
     }
 }
 
@@ -233,6 +243,41 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
         max-width: 60%;
         margin: 2rem auto;
     }
+
+    .local-details-container .single-data {
+        flex: 0 0 50%;
+    }
+
+    .local-carac-container .single-data {
+        flex: 0 0 32%;
+    }
+
+    .single {
+        .main-banner-title img {
+            width: 100%;
+            height: auto;
+            max-width: unset;
+            margin-left: 0;
+        }
+    }
+
+    .main-filter-container {
+        padding: 1rem 0.5rem !important;
+    }
+
+    .main-filter-container .filter-content-item .btn-search {
+        margin-top: 1.5rem;
+        width: 100%;
+    }
+
+    .locals-main-container .locals-item {
+        margin-bottom: 1.5rem;
+        text-align: center;
+    }
+
+    .mobile-filter-hidden {
+        display: none;
+    }
 }
 
 @media (max-width: 600px) {
@@ -273,6 +318,20 @@ MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
 
     .main-services-container .main-services-item-picture h3 {
         max-width: 80%;
+    }
+
+    .local-details-container .single-data {
+        flex: 0 0 100%;
+        font-size: 0.9rem;
+        line-height: 1.8rem;
+        padding: 0.3rem 0;
+    }
+
+    .local-carac-container .single-data {
+        flex: 0 0 50%;
+        font-size: 0.9rem;
+        line-height: 1.8rem;
+        padding: 0.3rem 0;
     }
 }
 
