--- a/css/balearic-style.css
+++ b/css/balearic-style.css
@@ -85,6 +85,10 @@ a:hover {
   margin-top: 1.5rem;
   position: relative;
   overflow: hidden;
+  max-height: 370px;
+  background-size: cover !important;
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
 }
 .main-banner-title img {
   width: 100%;
@@ -543,8 +547,7 @@ a:hover {
 7.- LOCALIZACIONES
 -------------------------------------------------------------- */
 .main-locals-search-container {
-  padding: 3rem 1rem;
-  padding-bottom: 1rem;
+  padding: 1rem;
 }
 .main-locals-search-container .searchform {
   background: #66C5E0;
@@ -610,4 +613,154 @@ a:hover {
 }
 .social-widget-container {
   font-size: 1.5rem;
+}
+.single-general-options .card {
+  border: 0;
+  padding: 0px;
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+}
+.single-general-options .card .card-body {
+  padding: 0.5rem;
+}
+.single-general-options .card .card-title {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+.single-title-container {
+  padding: 1rem 0;
+}
+.single-title-container h3 {
+  background-color: #66C5E0;
+  color: #ffffff;
+  font-weight: 600;
+  display: inline-block;
+  border-radius: 25px;
+  padding: 0.7rem 2rem;
+  font-size: 1rem;
+}
+.single-locals-gallery {
+  padding: 3rem 1rem;
+}
+.single-locals-gallery .gallery-top {
+  margin-bottom: 1.5rem;
+}
+.single-locals-gallery .gallery-top img {
+  border-radius: 10px;
+  width: 100%;
+}
+.single-locals-gallery .gallery-thumbs img {
+  border-radius: 15px;
+}
+.single-locals-gallery .swiper-button-special {
+  border: 2px solid #66c5e0;
+  color: white !important;
+  width: 40px;
+  border-radius: 20px;
+}
+.single-locals-gallery .swiper-button-special:after {
+  font-size: 20px;
+}
+.single-locals-gallery .swiper-button-special:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+.single-locals-main-info {
+  font-size: 0.9rem;
+  line-height: 1.8rem;
+}
+.single-data-options-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 1.5rem;
+  font-size: 0.9rem;
+}
+.single-data-options-container .single-data {
+  margin-right: 45px;
+}
+.btn-google {
+  background-color: #707070;
+  color: #ffffff;
+  font-weight: 600;
+  display: inline-block;
+  border-radius: 25px;
+  padding: 0.5rem 1.5rem;
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+}
+.local-details-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.local-details-container .single-data {
+  flex: 0 0 32%;
+  font-size: 0.9rem;
+  line-height: 1.8rem;
+  padding: 0.3rem 0;
+}
+.local-carac-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding-bottom: 3rem;
+}
+.local-carac-container .single-data {
+  flex: 0 0 24%;
+  font-size: 0.9rem;
+  line-height: 1.8rem;
+  padding: 0.3rem 0;
+}
+/* FILTRO */
+.main-filter-container {
+  background: #f3f3f3;
+  padding: 1rem 5rem !important;
+}
+.main-filter-container .filter-content-item {
+  font-size: 0.8rem;
+}
+.main-filter-container .filter-content-item label {
+  width: 100%;
+  display: block;
+  font-weight: 700;
+  font-size: 0.8rem;
+  margin-bottom: 5px;
+}
+.main-filter-container .filter-content-item .form-control {
+  background: #e6e6e6;
+  border: 0;
+  padding: 0.3rem 0.7rem;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  line-height: 0.9rem;
+}
+.main-filter-container .filter-content-item .btn-search {
+  background: #66C5E0;
+  color: #ffffff;
+  padding: 0.3rem 2rem;
+  border-radius: 5px;
+  font-weight: 300;
+  font-size: 1.1rem;
+}
+.main-filter-container .filter-content-item .btn-search:hover {
+  background: #2A9CBD;
+  color: #ffffff;
+}
+.mobile-filter-title {
+  padding-bottom: 0.5rem;
+}
+.mobile-filter-title .filter-button {
+  text-align: right;
+}
+.mobile-filter-title .filter-button button {
+  border: 0;
+  padding: 0;
+}
+.main-contact-content-section {
+  padding-bottom: 2rem;
+  text-align: center;
 }
